RESOLVED FIXED43469
<noscript> works the other way around in some cases when xhtmlmp enabled
https://bugs.webkit.org/show_bug.cgi?id=43469
Summary <noscript> works the other way around in some cases when xhtmlmp enabled
Charles Wei
Reported 2010-08-04 00:09:48 PDT
Created attachment 63422 [details] html file that demos the bug <noscript> should be processed when the Javascript is DISABLED and should be ignored when javascript is ENABLED. But with WebKit, if you enable xhtmlmp , noscript works the other way around in some cases, that is, <noscript> is processed and rendered when javascript is ENABLED, and is ignored when Javascript is DISABLED. The attachment reveals it. Please note, you need to turn on xhtmlmp support to reproduce this.
Attachments
html file that demos the bug (378 bytes, application/xhtml+xml)
2010-08-04 00:09 PDT, Charles Wei
no flags
The patch (2.90 KB, patch)
2010-08-04 00:56 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2010-08-04 00:56:06 PDT
Created attachment 63426 [details] The patch This patch fixes the problem. The logic was oppositely wrong in deciding if <noscript> should be processed.
WebKit Commit Bot
Comment 2 2010-08-05 06:20:18 PDT
Comment on attachment 63426 [details] The patch Clearing flags on attachment: 63426 Committed r64740: <http://trac.webkit.org/changeset/64740>
WebKit Commit Bot
Comment 3 2010-08-05 06:20:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.