2010-08-05  Charles Wei  <charles.wei@torchmobile.com.cn>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=43469
        <noscript> is working wrong in some cases when xhtmlmp is enabled.

        * fast/xhtmlmp/noscript-basic-expected.txt: Added.
        * fast/xhtmlmp/noscript-basic.xhtml: Added.
2010-08-05  Charles Wei  <charles.wei@torchmobile.com.cn>

        Reviewed by George Staikos.

        <noscript> is working the other way around in some cases with xhtmlmp enabled
        https://bugs.webkit.org/show_bug.cgi?id=43469

        Test: fast/xhtmlmp/noscript-basic.xhtml

        * dom/Document.cpp:
        (WebCore::Document::Document):

Canonical link: https://commits.webkit.org/55558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64740 268f45cc-cd09-0410-ab3c-d52691b4dbfc